# py-automation-toolkit

./: LICENSE  README.md  pyproject.toml
src/automation_toolkit/: cli.py  config.py  http.py
tests/: test_basic.py
