[project]
name = "automation-toolkit"
version = "0.1.0"
description = "Minimal Python automation toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="John Doe"}]
dependencies = [
    "typer>=0.12",
    "pydantic-settings>=2.5",
    "requests>=2.31",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
pytool = "automation_toolkit.cli:app"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
